--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Lottozahlen Generator für 6 aus 49 - Responsive und benutzerfreundlich">
     <meta name="keywords" content="Lotto, Lottozahlen, 6 aus 49, Generator, Responsive">
     <title>Lotto Generator</title>
-    <link rel="stylesheet" href="https://www.onlinemarketingtipp.de/test/styles.css" type="text/css" media="all">
+    <link rel="stylesheet" href="./styles.css" type="text/css" media="all">
 </head>
 <body>
     <div class="container">
@@ -356,6 +356,6 @@
             </div>
         </article>
     </div>
-    <script src="https://www.onlinemarketingtipp.de/test/script.js" type="text/javascript" defer></script>
+    <script src="./script.js" type="text/javascript" defer></script>
 </body>
 </html>
